# mala

./: .travis.yml  CMakeLists.txt  code-of-conduct.md  copyright.md  readme.md
cmake/include/: configure.cmake  documentation.cmake  install.cmake  option.cmake  test-dependency.cmake
src/: CMakeLists.txt
src/include/mala/: broken_promise.hpp  generator.hpp  generator_fwd.hpp  mala.hpp  task.hpp  task_fwd.hpp
src/include/mala/detail/: awaiter.hpp  type_traits.hpp
src/include/mala/detail/generator/: iterator.hpp  promise.hpp  sentinel.hpp
src/include/mala/detail/task/: final_awaitable.hpp  promise.hpp  promise_base.hpp  promise_fwd.hpp  promise_generic.hpp  promise_reference.hpp  promise_void.hpp
src/lib/: CMakeLists.txt
src/lib/detail/task/: CMakeLists.txt  final_awaitable.cpp  promise_base.cpp  promise_void.cpp
test/: CMakeLists.txt
test/include/testmala/: testmala.hpp
test/lib/: CMakeLists.txt
utils/citools/linux/: ci  complete_local_ci  local_ci
utils/devtools/: changelog  clang-tidy  setup.sh
